[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "read-toml"
module = "read_toml"
author = "Thomas Grainger"
author-email = "read-toml@graingert.co.uk"
home-page = "https://github.com/graingert/read-toml"
description-file = "README.rst"
requires = [
    "toml;python_version<'3.6'",
    "tomli >=1.1.0;python_version>='3.6'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-forward-compatability", "pytest-cov", "coverage>=5.3"]
mypy = ["mypy >= 0.910"]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py27, py34, py35, py36, py37, py38, py39, pypy, pypy3
minversion=3.24.1
isolated_build=true
requires=
    virtualenv >= 20.7.0
    tox-wheel >= 0.6.0
    tox-gh-actions >= 2.6.0


[testenv]
wheel = true
wheel_build_env = build
extras =
    test
    mypy: mypy
commands =
    python: pytest []
    mypy: mypy .

[testenv:build]

[testenv:release]
deps =
    flit
commands =
    python -m flit publish
"""


[tool.mypy]
strict = true
warn_unused_configs = true
